--- a/assets/sass/08-custom/index.scss
+++ b/assets/sass/08-custom/index.scss
@@ -1,4 +1,114 @@
+$custom-color-primary: #E6007E;
+
 .home-custom {
+    .home-container {
+        max-width: var(--responsive--alignwide-width);
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .home-video {
+        background: #000;
+        position: relative;
+        width: 100%;
+        height: 75vh;
+        z-index: -99;
+        overflow: hidden;
+
+        * {
+            box-sizing: border-box;
+        }
+
+        &-wrap,
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+
+        &-wrap {
+            @media (min-aspect-ratio: 16/9) {
+                top: -100%;
+                height: 300%;
+            }
+
+            @media (max-aspect-ratio: 16/9) {
+                left: -100%;
+                width: 300%;
+            }
+        }
+    }
+
+    .home-welcome {
+        text-align: center;
+        padding: 3rem 0;
+
+        &-title {
+            color: $custom-color-primary;
+            font-size: 3rem;
+            font-weight: bold;
+            letter-spacing: 1px;
+
+            &-alt {
+                color: white;
+                text-transform: uppercase;
+                margin-top: 3rem;
+            }
+        }
+
+        &-subtitle {
+            color: white;
+            font-size: 1.5rem;
+            font-weight: bold;
+            letter-spacing: 1px;
+        }
+
+        &-reasons {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: flex-start;
+
+            &-item {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                padding: 1rem;
+                flex: 0 0 15rem;
+                text-align: center;
+
+                &-icon {
+                    max-width: 100%;
+                    width: 100%;
+                    height: auto;
+
+                    &-wrapper {
+                        display: block;
+                        width: 60px;
+                        height: 60px;
+                        margin: 1rem auto;
+                        filter:
+                            invert(21%)
+                            sepia(92%)
+                            saturate(7279%)
+                            hue-rotate(318deg)
+                            brightness(89%)
+                            contrast(105%)
+                        ;
+                    }
+                }
+
+                &-label {
+                    display: block;
+                }
+            }
+        }
+    }
+
     .home-posts {
         display: flex;
         flex-wrap: wrap;
